--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,897 @@
-h1 {
-	color: red;
-	border: 1px solid red;
+@font-face {
+  font-family: Open Sans;
+  src: url(../fonts/OpenSans-Regular.ttf);
+  font-weight: 400;
+  font-style: regular;
+}
+
+@font-face {
+  font-family: Open Sans;
+  src: url(../fonts/OpenSans-Bold.ttf);
+  font-weight: 700;
+  font-style: bold;
+}
+
+body, p, h1, h2, h3, ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header {
+  min-height: 450px;
+  position: relative;
+
+  background-image: url(../images/banner-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+  }
+
+.header::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+  background-color: #000000;
+  opacity: 0.6;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.container:nth-child(n+2) {
+  margin-top: 64px;
+}
+
+.header-nav-wrp {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 41px;
+  padding-top: 30px;
+  align-items: center;
+  z-index: 3;
+}
+
+.logo-img {
+  max-width: 179px;
+  margin-right: auto;
+}
+
+.sections-list {
+  display: flex;
+  flex-direction: row;
+  max-width: 462px;
+  margin-left: auto;
+}
+
+.section-item {
+  text-decoration: none;
+}
+
+.section-item:hover {
+  content:"";
+  text-decoration: underline;
+}
+
+.sections-list-item {
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  font-style: regular;
+  text-transform: uppercase;
+}
+
+.sections-list-item:nth-child(n+2) {
+  padding-left: 34px;
+}
+
+.sections-list-item a {
+  color: #ffffff;
+}
+
+.header-title {
+  position: relative;
+  max-width: 679px;
+  min-height: 109px;
+  margin: 100px auto 125px;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  font-style: bold;
+  text-transform: uppercase;
+  line-height: 74px;
+  color: #ffffff;
+  text-align: center;
+  z-index: 3;
+}
+
+.trends {
+  display: flex;
+  flex-direction: column;
+  margin-top: 64px;
+}
+
+.section-title {
+  width: 100%;
+  text-align: center;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 20px;
+  line-height: 29px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.section-title::after{
+  content:'';
+  display: block;
+  margin: 10px auto 19px;
+  width: 66px;
+  height: 3px;
+  
+  background-color: #b59f5b;
+}
+
+.trends-posts-content {
+  display: flex;
+}
+
+.trend-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-grow: 1;
+  min-height: 319px;
+  position: relative;
+}
+
+.trend-post:nth-child(1) {
+  background-image: url(../images/trend1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+}
+
+.trend-post:nth-child(2) {
+  background-image: url(../images/trend2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+}
+
+.trend-post:nth-child(3) {
+  background-image: url(../images/trend3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+}
+
+.trend-post:nth-child(4) {
+  background-image: url(../images/trend4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+}
+
+.trend-post::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+  background-color: #000000;
+  opacity: 0.6;
+}
+
+.trend-post:nth-child(n+2) {
+  margin-left: 4px;
+}
+
+.trend-post-content {
+  position: relative;
+  max-width: 305px;
+  margin: 0 50px 45px;
+
+  outline: #b59f5b solid 3px;
+  outline-offset: 30px;
+  z-index: 3;
+}
+
+.trend-post-title {
+  margin-top: 6px;
+
+  font-family: Open Sans;
+  font-size: 20px;
+  line-height: 23px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.trend-post-title-link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.trend-post-title-link:hover {
+  content:'';
+  color: #b59f5b;
+}
+
+.main-content {
+  width: calc(100% - 270px);
+}
+
+.main-post {
+  display: flex;
+}
+
+.main-post:nth-child(n+2) {
+  margin-top: 59px;
+}
+
+.article-img {
+  width: 381px;
+  
+  background-color: #eff6f1;
+}
+
+.article-content {
+  width: 362px;
+  padding-left: 29px;
+}
+
+.sections-of-article {
+  display: flex;
+}
+
+.section-of-article:nth-child(n+2) {
+  padding-left: 18px;
+}
+
+.section-of-article a {
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #b59f5b; 
+  font-weight: 700;
+}
+
+.main-post-title {
+  margin: 6px 0 14px;
+  
+  font-family: Open Sans;
+  font-size: 20px;
+  line-height: 23px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.article-title-link {
+  text-decoration: none;
+  color: #0f0d0e;
+}
+
+.article-title-link:hover {
+  content:'';
+  color: #b59f5b;
+}
+
+.article-date {
+  margin-right: 15px;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 11px;
+  line-height: 39px;
+  color: #888888;
+  font-weight: 400;
+}
+
+.author {
+  padding-left: 11px;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 11px;
+  line-height: 39px;
+  color: #000000;
+  font-weight: 700;
+}
+
+.text-article {
+  font-size: 15px;
+  line-height: 22px;
+  color: #0f0d0e;
+  font-weight: 400;
+  font-family: Open Sans, sans-serif;
+  margin: 29px 0 0 0;
+}
+
+.article-content>.text-article:nth-child(n+2) {
+  margin: 10px 0 0 0;
+}
+
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  width: 270px;
+}
+
+.new-post-recommendation {
+  display: flex;
+  margin-top: 15px;
+}
+
+.recommendation-article-img {
+  max-width: 65px;
+  margin-top: 4px;
+  
+  background-color: #f4f7f6;
+}
+
+.aside-article-content {
+  max-width: 170px;
+  padding-left: 18px;
+}
+
+.posts-title {
+  margin-left: -11px;
+  padding: 0;
+  text-align: center;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.posts-title::after{
+  content:"";
+  display: block;
+  margin: 10px auto 19px;
+  width: 66px;
+  height: 3px;
+  
+  background-color: #b59f5b;
+}
+
+  
+.aside-post-date {
+  margin: 0;
+  padding: 0;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 11px;
+  color: #888888;
+  font-weight: 400;
+}
+
+.aside-post-title {
+  margin-top: 2px;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: 700;
+}
+
+.aside-search {
+  position: relative;
+  display: flex;
+  width: 270px;
+  height: 45px;
+  margin: 55px 0 0 0;
+  
+  background-color: #f4f7f6;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.search-text {
+  display: block;
+  width: 225px;
+  height: 45px;
+  padding: 0 0 0 17px;
+  border: none;
+  
+  background-color: #f4f7f6;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  line-height: 40px;
+  color: #000000;
+  font-weight: 400;
+}
+
+.search-text:focus {
+  outline: 1px solid #b59f5b;
+}
+
+.search-button {
+  content: "";
+  width: 45px;
+  height: 45px;
+  border: none;
+  
+  background-image: url(../svg/search.svg);
+  background-color: #b59f5b;
+  background-position: center center;
+  background-size: 17px;
+  background-repeat: no-repeat;
+}
+
+.search-button:hover {
+  background-color: #313131;
+}
+
+.aside-mailing {
+  margin-top: 52px;
+}
+
+.aside-email {
+  display: flex;
+  box-sizing: border-box;
+  width: 270px;
+  height: 45px;
+  padding-left: 17px;
+  border: none;
+  
+  background-color: #f4f7f6;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 12px;
+  line-height: 40px;
+  color: #000000;
+  font-weight: 400;
+}
+
+.aside-email:focus {
+  outline: 1px solid #b59f5b;
+}
+
+
+.mailing-button {
+  width: 270px;
+  height: 46px;
+  padding: 0;
+  margin-top: 12px;
+  border: none;
+  text-align: center;
+  
+  background-color: #b59f5b;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  line-height: 40px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+}
+
+.mailing-button:hover {
+  content: "";
+  background-color: #313131;
+}
+
+.aside-tegs {
+  display: block;
+  width: 270px;
+  margin-top: 50px;
+}
+
+.tegs-list {
+  display: flex;
+  flex-wrap: wrap; 
+  width: 270px;
+  text-align: center;
+  margin: 23px 0 6px 0;
+}
+
+.tegs-list-item {
+  height: 18px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding: 6px 13px 3px 13px;
+  border: 3px solid #eeeeee;
+  text-align: center;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.tegs-item-link {
+  text-decoration: none;
+  color: #0f0d0e;
+}
+
+.tegs-list-item:hover {
+  border: 3px solid #b59f5b;
+}
+
+.aside-themes {
+  display: block;
+  width: 270px;
+  margin-top: 41px;
+}
+
+
+.themes-list {
+  margin-top: -10px;
+  margin-left: 1px;
+}
+
+.themes-list-item {
+  margin: 0;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  line-height: 42px;
+  color: #000000;
+  font-weight: 700;
+}
+
+
+.themes-list-item:hover {
+  color: #b59f5b;
+}
+
+.themes-list-item::after {
+  content: "";
+  display: block;
+  width: 270px;
+  height: 1px;
+  margin: 0;
+  
+  background-color: #eeeeee;
+}
+
+.number-articles {
+  margin-left: 1px;
+  vertical-align: super;
+  
+  font-size: 11px;
+  line-height: 34px;
+  color: #b59f5b;
+}
+
+.shop {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 23px;
+}
+
+.shop-content {
+  display: flex;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.product:nth-child(n+2) {
+  margin-left: 10%;
+}
+
+.product-content {
+  display: flex;
+  flex-direction: column;
+  padding-top: 28px;
+  flex-grow: 1;
+
+  outline: #b59f5b solid 3px;
+  outline-offset: 20px;
+}
+
+.product-title {
+  font-family: Open Sans;
+  font-size: 20px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.product-description {
+  padding-bottom: 28px;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 15px;
+  line-height: 22px;
+  color: #0f0d0e; 
+  font-weight: 400;
+}
+
+.product-description a {
+  font-family: Open Sans, sans-serif;
+  font-size: 15px;
+  line-height: 22px;
+  color: #b59f5b; 
+  font-weight: 400;
+}
+
+.product-footer {
+  display: flex;
+  align-items: center;
+}
+
+.product-prices {
+  flex-grow: 1;
+}
+
+.product-price-old {
+  text-decoration: line-through;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
+  line-height: 23px;
+  color: #0f0d0e; 
+  font-weight: 700;
+}
+
+.product-price-new {
+  font-family: Open Sans, sans-serif;
+  font-size: 20px;
+  line-height: 23px;
+  color: #0f0d0e; 
+  font-weight: 700;	
+}
+
+.product-button {
+  width: 140px;
+  height: 48px;
+  padding: 0 25px;
+  flex-shrink: 0;
+  border: none;
+  
+  background-color: #b59f5b;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.product-button:hover {
+  content: "";
+  background-color: #313131;
+}
+
+.popup-hidden {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  padding-top: 24vh;
+  
+  background-color: #000000;
+  opacity: 0.6;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
+
+.popup-content {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  max-width: 390px;
+  width: 92%;
+  height: 588;
+  margin: auto;
+  padding: 45px 28px;
+
+  background-color: #f4f7f6;
+  opacity: 1;
+  z-index: 10;
+}
+
+.popup-form {
+  display: flex;
+  flex-direction: column;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  font-style: regular;
+  color: #000000;
+}
+
+.question {
+  padding-bottom: 3px;
+}
+
+.question:nth-child(n+2) {
+  margin-top: 13px;
+}
+
+.options-of-answer-visit-site, .review-type-of-content {
+  -webkit-appearance: none;
+  -moz-appearance: none; 
+  padding: 13px;
+
+  background-color: #f3f7f5;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  font-style: regular;
+  color: #000000;
+}
+
+.options-of-answer-visit-site:focus, .review-type-of-content:focus {
+  outline: 1px solid #b59f5b;
+}
+
+.review-type-of-content {
+  height: 13vh;
+  margin-bottom: 25px;
+}
+
+.popup-button-submit {
+  width: 100%;
+  height: 48px;
+  padding: 0 25px;
+  box-sizing: border-box;
+  border: none;
+  
+  background-color: #b59f5b;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.popup-button-submit:hover {
+  content: "";
+  background-color: #313131;
+}
+
+.popup-close {
+  position: absolute;
+  display: block;
+  top: -28px;
+  right: 0;
+  width: 20px;
+  height: 20px; 
+  border: none;
+  padding: 0;
+
+  background-color:  #000000;
+  opacity: 0.6;
+}
+
+ .popup-close:before {
+  content:"";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  background-image: url(../svg/form-x.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+
+  z-index: 20;
+}
+
+.footer-information {
+  text-align: center;
+  margin-top: 66px;
+}
+
+.widget-socials {
+  display: flex;
+  max-width: 1170px;
+  min-height: 83px;
+  margin: 0 auto 46px;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: #f4f7f6;
+}
+
+.widget-list-item {
+  display: flex;
+  position: relative;
+  width: 20px;
+  height: 20px;	
+  margin-right: 22px;
+}
+
+.widget-link-dribble {
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../svg/001-dribbble.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
+
+
+.widget-link-pinterest {
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../svg/002-pinterest.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
+
+
+.widget-link-tumblr {
+  width: 100%;
+  height: 100%;
+  
+  background-image: url(../svg/003-tumblr.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
+
+.copyright {
+  max-width: 219px;
+  min-height: 54px;
+  padding-left: 9px;
+  
+  font-family: Open Sans, sans-serif;
+  font-size: 11px;
+  font-weight: 700;
+  font-style: bold;
+  line-height: 40px;
+  color: #999999;
+  text-decoration: none;
 }
